--- a/AnewB_Common/pom.xml
+++ b/AnewB_Common/pom.xml
@@ -11,5 +11,11 @@
     <packaging>jar</packaging>
     <artifactId>AnewB_Common</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+    </dependencies>
 </project>
