--- a/AnewB_ES/pom.xml
+++ b/AnewB_ES/pom.xml
@@ -12,6 +12,30 @@
     <artifactId>AnewB_ES</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>AnewB</groupId>
+            <artifactId>AnewB_Common</artifactId>
+            <version>5.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- elasticsearch -->
+        <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>5.6.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-client</artifactId>
+            <version>5.6.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>5.6.7</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/fr.pilato.spring/spring-elasticsearch -->
         <dependency>
             <groupId>fr.pilato.spring</groupId>
@@ -32,11 +56,5 @@
             <version>3.0.3.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>AnewB</groupId>
-            <artifactId>AnewB_Common</artifactId>
-            <version>5.0.0</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 </project>
