--- a/AnewB_Web/src/main/resources/config/properties/config.properties
+++ b/AnewB_Web/src/main/resources/config/properties/config.properties
@@ -1,6 +1,3 @@
-#mysql version database druid setting
-#jdbc.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=newb
-# root 123456  \uFFFD\u03F4\uFFFD\uFFFD\u01F5\uFFFD\uFFFD\u07B8\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 validationQuery=SELECT 1
 jdbc.driver=com.mysql.jdbc.Driver
 #aliyun 119.23.231.239  newb 7262140
@@ -38,6 +35,8 @@ dubbo.url=zookeeper://192.168.1.188:2181
 
 zookeeper.url=193.112.44.172:2181
 
+#\u6B64\u5904\u5220\u9664\u4F1A\u5BFC\u81F4 \u52A0\u8F7D es5xml \u65F6 \u62A5\u9519 Could not resolve placeholder 'elasticsearch.cluster.name' in string value "${elasticsearch.cluster.name}"
+#\u5E94\u8BE5\u5728 \u5C06 \u914D\u7F6E\u6587\u4EF6 \u5168\u90E8\u62BD\u79BB \u5728 spring.xml\u4E2D\u52A0\u8F7D
 elasticsearch.cluster.name=qh
 elasticsearch.esNodes=frp1.chuantou.org:54130
 elasticsearch.esClient=frp1.chuantou.org:54120
