--- a/AnewB_Web/pom.xml
+++ b/AnewB_Web/pom.xml
@@ -31,6 +31,12 @@
             <version>5.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>AnewB</groupId>
+            <artifactId>AnewB_Config</artifactId>
+            <version>5.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- **********************Spring -->
         <!-- 针对tomcat的instrument实现 -->
