当es连接不上时,也能正常启动

--- a/AnewB_Config/src/main/resources/config/config.properties
+++ b/AnewB_Config/src/main/resources/config/config.properties
@@ -5,11 +5,11 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.username-1=root
 #jdbc.password-1=123456
 
-jdbc.url-1=jdbc\:mysql\://frp1.chuantou.org\:54126/newb?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-1=jdbc\:mysql\://frp.bob.kim\:44136/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
 jdbc.password-1=7262140
 
-jdbc.url-2=jdbc\:mysql\://frp1.chuantou.org\:54126/newb2?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-2=jdbc\:mysql\://frp.bob.kim\:44136/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
 jdbc.password-2=
 
@@ -38,8 +38,8 @@ zookeeper.url=193.112.44.172:2181
 #\u6B64\u5904\u5220\u9664\u4F1A\u5BFC\u81F4 \u52A0\u8F7D es5xml \u65F6 \u62A5\u9519 Could not resolve placeholder 'elasticsearch.cluster.name' in string value "${elasticsearch.cluster.name}"
 #\u5E94\u8BE5\u5728 \u5C06 \u914D\u7F6E\u6587\u4EF6 \u5168\u90E8\u62BD\u79BB \u5728 spring.xml\u4E2D\u52A0\u8F7D
 elasticsearch.cluster.name=qh
-elasticsearch.esNodes=frp1.chuantou.org:54130
-elasticsearch.esClient=frp1.chuantou.org:54120
+elasticsearch.esNodes=frp.bob.kim:54130
+elasticsearch.esClient=frp.bob.kim:54120
 
 jdbc.xaDataSourceClassName=com.alibaba.druid.pool.xa.DruidXADataSource
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
