--- a/AnewB_Config/src/main/resources/config/es.properties
+++ b/AnewB_Config/src/main/resources/config/es.properties
@@ -1,3 +1,5 @@
-elasticsearch.cluster.name=qh
-elasticsearch.esNodes=frp1.chuantou.org:54130
-elasticsearch.esClient=frp1.chuantou.org:54120
+#elasticsearch.cluster.name=qh
+#elasticsearch.esNodes=frp.bob.kim:54130
+#elasticsearch.esClient=frp.bob.kim:54120
+elasticsearch.cluster.name=kuaipi
+elasticsearch.esNodes=192.168.8.12:19300
