--- a/AnewB_Config/src/main/resources/config/redis.properties
+++ b/AnewB_Config/src/main/resources/config/redis.properties
@@ -11,7 +11,7 @@ redis.timeOut=10000
 
 #redis
 #redis.master.hostname=127.0.0.1
-redis.master.hostname=frp1.chuantou.org
+redis.master.hostname=frp.bob.kim
 redis.master.password=
 redis.master.port=54119
 #redis.master.password=
